# jam

./: .gitignore  AGENTS.md  API.md  Cargo.toml  FOLK.md  README.md  WORKFLOW.md  baseline.txt  build.rs  flake.nix  iteration-1-hash-join.txt  iteration-3-fast-match.txt  iteration-5-fast-set.txt  iteration-6-pattern-index.txt  iteration-7-emit-collector.txt  justfile  mise.toml  package.json  playwright.worktree-port.mjs  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/hooks/: format.sh
.github/workflows/: ci.yml
docs/: agentic-development-harness.md
docs/reports/: har-90-land-skill-investigation.md  jam-malleability-customization-report.md
examples/counter/: Makefile  Package.swift  package.json  tsconfig.json
examples/counter-ios/: Package.swift
examples/counter-macos/: Makefile
examples/folk-todo/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
examples/jamagui-catalog/: package.json
examples/obsidian-clone/: README.md  index.html  package.json  playwright.config.ts  vite.config.ts
examples/puddy/: .gitignore  Makefile  Package.swift  screenshot.sh
examples/puddy-native/: Package.swift
examples/puddy-ui/: README.md  package.json  playwright.config.ts  tsconfig.json
examples/puddy-vite/: .oxlintrc.json  README.md  index.html  oxlint-plugin-puddy.mjs  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
examples/spatial-counter/: Package.swift
examples/todo/: Makefile  Package.swift
examples/trello-clone/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
examples/ui-catalog/: index.html  package.json  tsconfig.json
examples/ui-catalog-native/: Package.swift  package.json  tsconfig.build.json  tsconfig.json
internal-docs/: FOLK.md
nix/modules/: devshell.nix  rust.nix
scripts/: agent-harness.mjs
src/: bridge.rs  circuit.rs  db.ts  engine.rs  index.ts  js_runtime.rs  jsx.ts  lib.rs  pattern.rs  primitives.ts  renderer.ts  rule.rs  select.ts  term.rs  transpile.rs  wa-sqlite.d.ts
src/__bench__/: reactive.bench.ts  render.bench.ts
src/__tests__/: inject.test.ts  primitives.test.ts  renderer-pattern.test.ts  (+1 more)
tests/: puddy_e2e.rs  puddy_models.rs  todo.rs
ts/: components.ts  jam.d.ts  package-lock.json  package.json  pnpm-lock.yaml  runtime.ts  skeletons.d.ts  tsconfig.json
(+151 files in other folders)
