[package]
name = "jam"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
dbsp = "0.272"
ordered-float = { version = "4", features = ["serde", "rkyv_64"] }
rkyv = { version = "0.7.45", default-features = false, features = ["std", "size_64"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
size-of = { version = "0.1.7", package = "feldera-size-of" }
feldera-macros = "0.272"
oxc = { version = "0.121", features = ["transformer", "semantic", "codegen"] }
rquickjs = { version = "0.11", features = ["bindgen", "classes", "properties", "parallel"] }
swift-bridge = "0.1"

[build-dependencies]
swift-bridge-build = "0.1"
